--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ flutter:
     - assets/emblem.jpeg
     - assets/snehapic.jpg
     - assets/pinkbg1.jpg
+    - assets/logo.jpg
+    - assets/pinkbg.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
