--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,14 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   hive_generator: ^1.1.3
   build_runner: ^2.2.0
+  flutter_launcher_icons: ^0.9.2
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/dpp.jpeg"
+  image_path_android: "assets/dpp.jpeg"
+  image_path_ios: "assets/dpp.jpeg"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
